Updated instructions Azure related Labs and Demos
All notes on broken instructions (due to deprecated Azure functionality or breaking changes w/ replacement APIs)

--- a/Instructions/20487D_MOD05_LAK.md
+++ b/Instructions/20487D_MOD05_LAK.md
@@ -93,10 +93,9 @@
                 CreateWebHostBuilder(args).Build().RunAsService();
             }
 
-            public static IWebHost BuildWebHost(string[] args) =>
+            public static IWebHostBuilder BuildWebHost(string[] args) =>
                 WebHost.CreateDefaultBuilder(args)
-                    .UseStartup<Startup>()
-                    .Build();
+                    .UseStartup<Startup>();
         }
     }
     ```
@@ -118,6 +117,7 @@
 4. To create your Windows service, paste the following command, and then press Enter:
     ```bash
       sc create FlightsService binPath= "[Repository Root]\Allfiles\Mod05\Labfiles\Exercise1\Starter\BlueYonder.Flights.Service\svc\BlueYonder.Flights.Service.exe"
+	  NB: USE FULL PATH (!) or service startup will fail
     ```
 
 
@@ -188,6 +188,10 @@
     >**Note**: Replace **{Your Initials}** with your actual initials and copy the **App name** value to any code editor.
     
 6. In the **Resource Group** box, select **Use existing**, and then from the **Resource Group** list, select **BlueYonder.Lab.05**.
+
+
+** Choose runtime stack: NET Core 2.1 (LTS)
+
 7. Click **App service plan/Location**, and then click **Create new**.        
 8. In the **App Service plan** box, type **MyFlightAppService**.
 9.  Click the **Pricing tier** box, select **F1**, and then click **Apply**.
@@ -210,6 +214,8 @@
 	```
 	>**Note**: Replace **{Your Initials}** with your actual initials.
 9. In the top menu, click **Save**.
+10. Select Type: SQLAzure
+11. In the top menu, click **Save**.
 
 #### Task 4: Configure IIS logs	
 
@@ -220,7 +226,7 @@
     >**Note:** You will need the credentials for the next steps. Copy them to any code editor.
 	
 4. In the top menu, click **Save Credentials**.
-5. In your **Web App** menu, in the **MONITORING** menu, click **Diagnostics logs**.
+5. In your **Web App** menu, in the **MONITORING** menu, click **App Service logs**.
 6. Set the **Application Logging (Filesystem)** option to **On**.
 7. Set the level to **Verbose**.
 8. Set **Failed request tracing** to **On**, and then in the top menu, click **Save**.
@@ -312,6 +318,11 @@
 11. To start streaming logs into the PowerShell instance, paste the following command:
     ```ps
      Get-AzureWebsiteLog -Name blueyonder-flights-{Your Initials} -Tail -Path http
+	
+	
+	**not working (downstream service failed)  -> use Get-AzureRmLog instead?)**
+	
+	
     ```
     >**Note**: Replace **{Your Initials}** with your actual initials.
 12. Open another PowerShell instance.
@@ -388,6 +399,11 @@
 9.  To run the docker container which is listening on a default port, paste the following command, and then press Enter:
     ```bash
     	docker run --rm -it -p 8080:80 hotels_service
+		
+		
+		** in case of errors, verify that IIS sites using same ports are stopped **
+		
+		
     ```
 10. Open a browser and navigate to **localhost:8080/api/hotels**.
 11. Check that you are getting the expected response such as the following:
@@ -633,6 +649,9 @@
 
 1. Open a browser and navigate to **https://{Your App Name}.azurewebsites.net/api/BookFlightFunc?flightId=1**.
     >**Note**: Replace **{Your App Name}** with your App name.
+	
+	Note: cannot be done using current portal, as calls to function require (default) api key. Extend the query string accordingly or use the 'code and test' tab to perform a GET.
+	
 2. Check whether you are getting the expected response such as the following:
 	```cs
     Request to book flight was sent successfully
