--- a/Instructions/20487D_MOD06_LAK.md
+++ b/Instructions/20487D_MOD06_LAK.md
@@ -233,7 +233,7 @@
 
 1. To add credentials to the app service, under the **DEPLOYMENT** section, click **Deployment Center**, Select **FTP**, click **Dashboard** and then provide the following information:
     - In **FTP** pane click **User Credentials** , in username box type **FTPMod6Lab2**{YourInitials}.
-    - In the **Password** and **Confirm password** boxes, type **Password99**.
+    - In the **Password** and **Confirm password** boxes, type **Password123!**.
     - Click **Save Credentials**.
     >**Note**: **Deployment credentials** give the options to deploy the app from the command prompt.
 2. Open the command prompt.
@@ -534,6 +534,10 @@
     ```xml
      <rate-limit-by-key calls="2" renewal-period="60" counter-key="@(context.Subscription.Id)" />
     ```
+	
+	Note: latest version portal UI editor generates the following:
+	<rate-limit-by-key calls="2" renewal-period="60" counter-key="@(context.Subscription?.Key ?? "anonymous")" />
+	
 7. Click **Save**.
 
 #### Task 4: Test the rate limit
