--- a/Instructions/20487D_MOD07_LAK.md
+++ b/Instructions/20487D_MOD07_LAK.md
@@ -42,6 +42,11 @@
 5. To set the connection string as the environment variable, run the following command:
    ```bash
    SET AZURE_STORAGE_CONNECTION_STRING="{Paste Your Connection String}"
+   
+   Note: if performing these steps via Powershell, the syntax will be:
+   #env:AZURE_STORAGE_CONNECTION_STRING="{Paste Your Connection String}"
+   (this sets the environment variable for the duration of the session)
+   
    ```
 6. To upload the image to the Blob Storage container, run the following command:
    ```bash
@@ -229,6 +234,9 @@
 11. In **Database id**, select **Create new**, and then type **blueyonder**.
 12. In **Graph Id**, type **traveler**
 13. In **Storage capacity**, select **Fixed (10 GB)**, and then click **OK**.
+
+Note: fixed storage capacity cannot be selected and a partition key is mandatory - patched lab steps by specifying a bogus partition key 'partitionKey', and
+modifying script in assets folder with the substatement ".property(single, 'partitionKey', '*')" after each Vertex creation (e.g. .addV('city').as('Rome')).
 
 #### Task 2: Run a script to import itinerary data (flights and destinations) to the database
 
@@ -543,6 +551,9 @@
 #### Task 2: Verify you are accessing multiple instances
 
 Refresh the page twice, and then verify that the **X-BlueYonder-Server** header has changed.
+
+Note: in case these instructions are not working, try switching the 'technology stack' (under settings) from default (.net framework 4.7 -> .net core) which auto forces restart.
+
 
 #### Task 3: Verify you are getting the cached data
 
