--- a/Instructions/20487D_MOD08_LAK.md
+++ b/Instructions/20487D_MOD08_LAK.md
@@ -252,6 +252,9 @@
 1. Switch to Azure Portal.
 2. Click **All resources**, and then click the **blueyondermod08lab2**{YourInitials} resource from type of **Application Insights**.
 3. On the right pane, Click **View Applications Insights data** in the **Configure** section, click **Performance testing**.
+
+Note: 'Performance testing' item is moved from section 'Configure' => 'Investigate'
+
 4. On the top menu bar, click **Set Organization**, and then add the following information:
     - In **Organization Settings(Preview)**, click **Or Create New**, and then type **blueyondervsts**{YourInitials}.
     - In **Subscription**, click **Azure Pass**.
