--- a/Instructions/20487D_MOD09_LAK.md
+++ b/Instructions/20487D_MOD09_LAK.md
@@ -445,6 +445,7 @@
     ```bash
         dotnet run
     ```
+	NOTE: may need to trust development certificate, see https://www.hanselman.com/blog/DevelopingLocallyWithASPNETCoreUnderHTTPSSSLAndSelfSignedCerts.aspx
 7.  Verify that **[value1, value2]** return back to the command prompt.
 8.  Close all open windows.
 
@@ -462,6 +463,10 @@
 6. After the tenant is created, click **Directory+subscription**, and then select your tenant.
 7. In the top left-hand side corner of the Azure portal, choose **All services**, and then search for and select **Azure AD B2C**.
 8. On the blade, select **Applications** and click **Add**.
+ Note: Applications is now Applications (Legacy)
+ See also (applies to following steps): https://docs.microsoft.com/nl-nl/azure/active-directory/develop/app-registrations-training-guide-for-app-registrations-legacy-users
+ Note1: during creation - choose => Supported account types - choose 'Accounts in any organisational directory or any identity provider. CHOOSE THIS TO AUTHENTICATE WITH AZURE AD B2C'
+ Note2: under Authentication => Implicit grant, choose 'Access tokens' (and, optionally, 'ID tokens')
 9. Enter the name of the application.
 10. Under **Web App / Web API**, select **Yes**.
 11. Under **Reply URL**, add **https://jwt.ms** and **https://localhost:5001/index.html**, then click **Create**
